# nara-zk

./: .gitignore  Anchor.toml  README.md  package.json
app/: proofUtils.ts  utils.ts
circuits/: ownership.circom  withdraw.circom
migrations/: init.ts
programs/nara-zk/: Cargo.toml
programs/nara-zk/src/: constants.rs  errors.rs  events.rs  lib.rs  merkle_tree.rs  poseidon.rs  state.rs  verifier.rs
programs/nara-zk/src/instructions/: deposit.rs  initialize.rs  initialize_config.rs  mod.rs  register.rs  transfer_zk_id.rs  update_config.rs  withdraw.rs  withdraw_fees.rs
programs/nara-zk/src/state/: config.rs  inbox.rs  merkle_tree.rs  mod.rs  nullifier.rs  pool.rs  zk_id.rs
tests/: init.ts  nara-zk.ts
