[package]
name = "nara-zk"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nara_zk"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
bytemuck = { version = "1", features = ["derive"] }
groth16-solana = "0.2.0"
# anchor-spl and groth16-solana need Rust 1.85+ (edition2024). Added in Phase 5.
# Poseidon uses sol_poseidon syscall directly (no external crate needed).


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
